fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,11 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* :root{
---biggest-font-size: 2rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
-} */
-  body{   margin: 0;
+html{
+  scroll-behavior: smooth;
+}
+
+body{   margin: 0;
     font-family: 'Inter', sans-serif;
     
     
@@ -22,7 +17,7 @@ html {
 }
 @media only screen and (min-width: 300px) {
   html {
-    font-size: 11px;
+    font-size: 12px;
   }
 }
 @media only screen and (min-width: 400px) {
@@ -46,7 +41,7 @@ html {
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 910px) {
   html {
     font-size: 22px;
   }
@@ -55,7 +50,7 @@ html {
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   html {
-    font-size: 24px;
+    font-size: 22px;
   }
 }
 
